--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "helper_functions.h": "c",
         "push_swap.h": "c",
         "unistd.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "ft_stack.h": "c",
+        "utils.h": "c"
     }
 }
