--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
 	"files.associations": {
-		"push_swap.h": "c"
+		"algorithm": "c",
+		"get_next_line.h": "c",
+		"fcntl.h": "c",
+		"utils.h": "c"
 	}
 }
